--- a/client/lib/i18n/en.json
+++ b/client/lib/i18n/en.json
@@ -12,7 +12,11 @@
     "loading": "Loading...",
     "error": "Error",
     "noResults": "No results",
-    "total": "Total"
+    "total": "Total",
+    "retry": "Retry",
+    "notFound": "Page Not Found",
+    "notFoundDescription": "The page you are looking for does not exist",
+    "backToHome": "Back to Home"
   },
   "map": {
     "title": "NTU Food Map",
