feat: add comments system and improve API error handling
Features:
- ? Complete comment system (CRUD operations)
  - Create, edit, delete comments
  - Comment sorting (by time/likes)
  - 1-5 star rating system
  - Like/dislike functionality
  - User permission management (users can only edit/delete their own comments)

- ? API connection improvements
  - Add fetch timeout handling and better error messages
  - Improve MongoDB connection caching and reconnection mechanism
  - Add connection diagnostic and testing scripts
  - Fix API route timeout issues

Technical implementation:
- Add CommentSection component
- Add UserCommentsList component
- Implement complete comment API routes
- Add comment-related test files
- Improve error handling and user experience

--- a/client/lib/i18n/en.json
+++ b/client/lib/i18n/en.json
@@ -82,6 +82,8 @@
     "categories": "Categories",
     "features": "Features",
     "reviews": "Reviews",
+    "googleReviews": "Google Reviews",
+    "googleReviewsDescription": "The following reviews are from Google Maps, for reference only",
     "photos": "Photos",
     "recommendationScore": "Recommendation Score",
     "scoreBreakdown": "Score Breakdown",
