chore: remove line oauth support

--- a/client/lib/i18n/en.json
+++ b/client/lib/i18n/en.json
@@ -181,8 +181,7 @@
     "signIn": "Sign In",
     "signOut": "Sign Out",
     "signInWithGoogle": "Sign in with Google",
-    "signInWithLine": "Sign in with Line",
-    "selectSignInMethod": "Please select a sign-in method",
+    "selectSignInMethod": "Please sign in",
     "loading": "Loading...",
     "signInRequired": "Please sign in",
     "signInToComment": "Sign in to comment",
