--- a/client/lib/i18n/zh.json
+++ b/client/lib/i18n/zh.json
@@ -181,8 +181,7 @@
     "signIn": "登入",
     "signOut": "登出",
     "signInWithGoogle": "使用 Google 登入",
-    "signInWithLine": "使用 Line 登入",
-    "selectSignInMethod": "請選擇登入方式",
+    "selectSignInMethod": "請先登入",
     "loading": "載入中...",
     "signInRequired": "請先登入",
     "signInToComment": "登入後即可留言",
